Change project from Sunlight -> Skylight

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-    <title>Sunlight Colour Selector</title>
+    <title>Skylight Colour Selector</title>
 
     <style>
         body {
@@ -121,7 +121,7 @@
     </head>
     <body>
 
-    <h1>Sunlight Colour Selector</h1>
+    <h1>Skylight Colour Selector</h1>
 
     <div class="wheel" id="colorWheelDemo"></div>
     <div class="buttons">
